--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,37 @@
 {
-  "homepage": "https://Narendra-027.github.io/ResumeFolio",
-  "main": "src/index.js",
   "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.9.4",
+    "axios": "^0.18.0",
+    "formik": "^2.4.5",
     "html2pdf.js": "^0.10.1",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-pdf": "^7.3.3",
-    "react-scripts": "5.0.0",
+    "react-redux": "^7.1.0-rc.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "react-to-print": "^2.14.4",
-    "web-vitals": "^2.1.4"
+    "redux": "4.0.0",
+    "redux-form": "^8.3.10",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^2.2.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +55,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "http-proxy-middleware": "2.0.6"
   }
 }
